# vsep

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: README.md  __init__.py  example_usage.py  variables.py
docs/: API-Reference.md  Architecture.md
notebooks/: vsep_demo.ipynb
remote/: README.md  cli.py  deploy_cloudrun.py  deploy_modal.py
separator/: common_separator.py  ensembler.py  separator.py
separator/architectures/: demucs_separator.py  mdx_separator.py  mdxc_separator.py  vr_separator.py
separator/roformer/: README.md
separator/uvr_lib_v5/vr_network/: layers.py  layers_new.py
utils/: cli.py
wiki/: Architecture.md  CLI-Reference.md  Configuration.md  Google-Colab.md  Home.md  Installation.md  Model-Catalog.md  Python-API.md  Troubleshooting.md  _Sidebar.md
