[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vsep"
version = "0.43.1"
description = "Lightning-fast audio stem separator with AI-powered vocal removal and instrument extraction"
authors = ["Andrew Beveridge <andrew@beveridge.uk>"]
license = "MIT"
readme = "README.md"
include = ["separator/models.json", "ensemble_presets.json"]
homepage = "https://github.com/BF667-IDLE/vsep"
repository = "https://github.com/BF667-IDLE/vsep"
documentation = "https://github.com/BF667-IDLE/vsep#readme"
keywords = ["audio", "sound", "karaoke", "vocal-remover", "stem-separation", "music-separation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2"
numpy = ">=2"
librosa = ">=0.10"
samplerate = "0.1.0"
six = ">=1.16"
torch = ">=2.3"
torch_directml = {version = "*", optional = true}
tqdm = "*"
pydub = ">=0.25"
audioop-lts = { version = ">=0.2.1", python = "^3.13" }
onnx-weekly = { version = "*" }
onnx2torch-py313 = ">=1.6"
onnxruntime = { version = ">=1.17", optional = true }
onnxruntime-gpu = { version = ">=1.17", optional = true }
onnxruntime-directml = { version = ">=1.17", optional = true }
julius = ">=0.2"
diffq-fixed = { version = ">=0.2", platform = "win32" }
diffq = { version = ">=0.2", platform = "!=win32" }
einops = ">=0.7"
pyyaml = "*"
ml_collections = "*"
resampy = ">=0.4"
beartype = "^0.18.5"
rotary-embedding-torch = "^0.6.1"
scipy = "^1.13.0"
soundfile = ">=0.12"

[tool.poetry.extras]
cpu = ["onnxruntime"]
gpu = ["onnxruntime-gpu"]
dml = ["onnxruntime-directml", "torch_directml"]

[tool.poetry.scripts]
vsep = 'utils.cli:main'
vsep-remote = 'remote.cli:main'

[tool.poetry.group.dev.dependencies]
black = ">=23"
pytest = "*"
pytest-cov = ">=4.1.0"
matplotlib = ">=3.8.0"
pillow = ">=10.1.0"
scikit-image = ">=0.22.0"
filetype = ">=1"

[tool.black]
line-length = 140
